sass/home: Fix transition issues with social icons on Safari
Safari tries to animate too much but it has no idea how to make it
look good.

--- a/wesmere/sass/home/_social.scss
+++ b/wesmere/sass/home/_social.scss
@@ -245,5 +245,6 @@ $sbutton-bg:								rgba($wui-text-navlink, 0.15);
 #sociallinks a,
 #social-trail a,
 #donate-box a {
+	transition-property: background-color, color;
 	transition-duration: 200ms;
 }
